<resources>
    <string name="app_name">Cinergy</string>
    <string name="join_the_magic_label">Join The Magic</string>
    <string name="be_cinergy_elite_label">Be Cinergy ELITE!</string>
    <string name="enjoy_free_popcorn_on_sign_up_label">Enjoy a free popcorn on sign up.</string>
    <string name="enjoy_5_elite_reward_after_300_points_to_spend_label">Enjoy a $5.00 Elite reward after 300 points to spend however to want.</string>
    <string name="enjoy_special_birthday_movie_ticket_offer_label">Enjoy a special birthday movie ticket offer.</string>
    <string name="enjoy_exclusive_content_sneaks_peaks_special_offers_label">Enjoy exclusive content, sneaks peaks, and special offers!.</string>
    <string name="sign_in_now_action">Sign In Now!</string>
    <string name="do_not_have_account_action">Don\'t have an account?</string>
    <string name="sign_up_action">Sign Up</string>
    <string name="continue_as_guest_action">Continue As Guest</string>
    <string name="continue_action">Continue</string>
    <string name="back_action">Back</string>
    <string name="current_location_label">Tulsa, Ok</string>
    <string name="escape_room_label">Escapes Rooms</string>
    <string name="book_now_action">Book Now</string>
    <string name="member_label">Up to %1$s members</string>
    <string name="more_action">More</string>
    <string name="choose_date_label">Choose Date</string>
    <string name="choose_time_label">Choose Time</string>
    <string name="nr_time_duration_label">NR ·</string>
    <string name="unknown_error_message">Something went wrong, Please try again.</string>
</resources>