<layout>

    <data>

        <variable
            name="viewModel"
            type="com.example.cinergy.presentation.movieSchedule.MovieScheduleViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mg_pd_32"
            android:onClick="@{() -> viewModel.onBackClicked()}"
            android:paddingStart="@dimen/mg_pd_8"
            android:paddingTop="@dimen/mg_pd_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back_arrow_24"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:onClick="@{() -> viewModel.onBackClicked()}"
            android:paddingTop="@dimen/mg_pd_16"
            android:text="@string/back_action"
            android:textColor="@color/black"
            android:textSize="@dimen/sz_typo_font_size_20"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/ic_back"
            app:layout_constraintStart_toEndOf="@id/ic_back"
            app:layout_constraintTop_toTopOf="@id/ic_back" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/mg_pd_16"
            app:layout_constraintBottom_toBottomOf="@id/tv_current_location"
            app:layout_constraintEnd_toStartOf="@id/tv_current_location"
            app:layout_constraintTop_toTopOf="@id/tv_current_location"
            app:srcCompat="@drawable/ic_location_pin_24"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_current_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mg_pd_16"
            android:layout_marginEnd="@dimen/mg_pd_8"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/current_location_label"
            android:textColor="@color/black"
            android:textSize="@dimen/sz_typo_font_size_16"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ic_back" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_movie_image"
            android:layout_width="@dimen/mg_pd_70"
            android:layout_height="180dp"
            android:layout_marginTop="@dimen/mg_pd_16"
            app:layout_constraintStart_toStartOf="@id/tv_back"
            app:layout_constraintTop_toBottomOf="@id/tv_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/mg_pd_16"
            android:textColor="@color/black"
            android:textSize="@dimen/sz_typo_font_size_16"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_movie_image"
            app:layout_constraintTop_toTopOf="@id/img_movie_image" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_movie_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/mg_pd_16"
            android:layout_marginTop="@dimen/mg_pd_8"
            android:textColor="@color/black_70"
            android:textSize="@dimen/sz_typo_font_size_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_movie_image"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_choose_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/mg_pd_16"
            android:layout_marginTop="@dimen/mg_pd_40"
            android:text="@string/choose_date_label"
            android:textColor="@color/black_70"
            android:textSize="@dimen/sz_typo_font_size_14"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_movie_image" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_date_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mg_pd_16"
            android:background="@drawable/bg_corner_radius_4_dark_100"
            android:padding="@dimen/mg_pd_8"
            app:layout_constraintEnd_toEndOf="@id/tv_choose_date"
            app:layout_constraintStart_toStartOf="@id/tv_choose_date"
            app:layout_constraintTop_toBottomOf="@id/tv_choose_date" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_choose_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mg_pd_16"
            android:text="@string/choose_time_label"
            android:textColor="@color/black_70"
            android:textSize="@dimen/sz_typo_font_size_14"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/rv_date_list"
            app:layout_constraintStart_toStartOf="@id/rv_date_list"
            app:layout_constraintTop_toBottomOf="@id/rv_date_list" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_time_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mg_pd_16"
            app:layout_constraintEnd_toEndOf="@id/tv_choose_time"
            app:layout_constraintStart_toStartOf="@id/tv_choose_time"
            app:layout_constraintTop_toBottomOf="@id/tv_choose_time" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_continue_as_guest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/mg_pd_16"
            android:layout_marginBottom="@dimen/mg_pd_72"
            android:background="@drawable/bg_corner_radius_4_light_green"
            android:text="@string/continue_action"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>